Fixed display on smaller screens

--- a/AboutMe/style.css
+++ b/AboutMe/style.css
@@ -25,7 +25,7 @@ font-family: 'Cabin', sans-serif;
 */
 
 .header {
-	color: #424242; 
+	color: #424242;
 	font-size: 30px;
 	font-weight: bold;
 	font-family: 'Open Sans', sans-serif;
@@ -108,7 +108,7 @@ a:focus {
 	    -o-transform-style: preserve-3d;
 	    -o-transition: 0.5s;
 	    transition: 0.5s;
-		margin: 25px 25px;
+		margin: 25px 7px;
 	}
 	.flipcard .face {
 		position: absolute;
@@ -296,7 +296,7 @@ a:focus {
 	/* pre
 	background-color: none;
 	border: 0 none;
-	
+
 	font-size: 15px;
 }
 
